--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,119 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Travel Guide
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class='ion-padding' color="light">
+  <h1><strong>Hi, Gi, <br> Where do you want to go?</strong></h1>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+ <ion-searchbar placeholder="Input Destionation" searchIcon="location"></ion-searchbar>
+
+  <ion-row class="ion-align-items-center">
+    <ion-col size="auto">
+      <h2 class="ion-no-margin">Daily Scenary</h2>
+    </ion-col>
+    <ion-col size="auto">
+      <ion-text color="primary">
+        <small>Updated</small>
+      </ion-text>
+    </ion-col>
+    <ion-col size="auto" class="ml-auto">
+      <ion-button fill="clear" color="medium">
+        More
+      </ion-button>
+    </ion-col>
+  </ion-row>
+
+  <ion-card>
+    <img class="daily-scenary-cover-image" 
+    src="https://images.pexels.com/photos/4765607/pexels-photo-4765607.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" />
+    <ion-card-header>
+      <ion-row>
+        <ion-col size="auto">
+          <ion-card-subtitle>05/06/2021</ion-card-subtitle>
+          <ion-card-title>São Paulo, Brazil</ion-card-title>
+        </ion-col>
+        <ion-col size="auto" class="ml-auto">
+          <ion-row>
+            <ion-avatar class="daily-scenary-avatar">
+              <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="">
+            </ion-avatar>
+            <ion-avatar class="daily-scenary-avatar">
+              <img src="https://randomuser.me/api/portraits/women/91.jpg" alt="">
+            </ion-avatar>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-row class="ion-align-items-center">
+    <ion-col size="auto">
+      <h2 class="ion-no-margin">City</h2>
+    </ion-col>
+    <ion-col size="auto">
+      <ion-text color="primary">
+        <ion-badge color="primary">Hot</ion-badge>
+      </ion-text>
+    </ion-col>
+    <ion-col size="auto" class="ml-auto">
+      <ion-button fill="clear" color="medium">
+        More
+      </ion-button>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+      <ion-card>
+        <img src="https://images.pexels.com/photos/5048704/pexels-photo-5048704.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+        <ion-card-header>
+          <ion-card-subtitle>Turkey</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </ion-col>
+    <ion-col>
+      <ion-card>
+        <img src="https://images.pexels.com/photos/5048704/pexels-photo-5048704.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+        <ion-card-header>
+          <ion-card-subtitle>Turkey</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </ion-col>
+    <ion-col>
+      <ion-card>
+        <img src="https://images.pexels.com/photos/5048704/pexels-photo-5048704.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+        <ion-card-header>
+          <ion-card-subtitle>Turkey</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </ion-col>
+  </ion-row>
+
+
+  <h2>Master</h2>
+
+  <ion-row>
+    <ion-col size="auto"><ion-avatar class="master-avatar">
+      <img src="https://randomuser.me/api/portraits/women/17.jpg" />
+    </ion-avatar></ion-col>
+    <ion-col size="auto"><ion-avatar class="master-avatar">
+      <img src="https://randomuser.me/api/portraits/women/18.jpg" />
+    </ion-avatar></ion-col>
+    <ion-col size="auto"><ion-avatar class="master-avatar">
+      <img src="https://randomuser.me/api/portraits/women/19.jpg" />
+    </ion-avatar></ion-col>
+    <ion-col size="auto"><ion-avatar class="master-avatar">
+      <img src="https://randomuser.me/api/portraits/women/20.jpg" />
+    </ion-avatar></ion-col>
+    <ion-col size="auto">
+      <ion-button fill="clear">
+        Join hem.
+      </ion-button>
+    </ion-col>
+  </ion-row>
+
 </ion-content>
