--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content class='ion-padding' color="light">
-  <h1><strong>Hi, Gi, <br> Where do you want to go?</strong></h1>
+  <h1><strong>Hi, People, <br> Where do you want to go?</strong></h1>
 
  <ion-searchbar placeholder="Input Destionation" searchIcon="location"></ion-searchbar>
 
